name:                pipes-category
version:             0.1.0.0
synopsis:            Allows instances for Category, Arrow and ArrowChoice for Pipes.Pipe using newtypewrapper PipeC.
description:         Please see README.md
homepage:            https://github.com/louispan/pipes-category#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2016 Louis Pan
category:            Control, Pipes
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pipes.PipeC
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , pipes
                     , pipes-extras
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable pipes-category-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipes
                     , pipes-category
                     , transformers
  default-language:    Haskell2010

test-suite pipes-category-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipes-category
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/pipes-category
